raw-manifests/local-staging/sample-dotnet/stag-2/wf-vs.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: sample-dotnet-wf-stag-2-vs
  namespace: istio-system
spec:
  hosts:
    - "wf-stag-2.staging.local"
  gateways:
    - istio-ingressgateway-staging
  http:
    - route:
        - destination:
            host: sample-dotnet-wf-staging-stag-2-service.sample-dotnet-wf-staging-stag-2.svc.cluster.local
            port:
              number: 80
